--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Practicas Github</h1>
+    <h1>Prueba</h1>
     <h2>https://ajoaquinlizarraga.github.io/apipublic/mydata/people/people.json</h2>
     <h2>https://ajoaquinlizarraga.github.io/apipublic/mydata/people/people.json</h2>
-    <h2>https://ajoaquinlizarraga.github.io/apipublic/mydata/people/people.json</h2>
-    <h2>https://ajoaquinlizarraga.github.io/apipublic/mydata/people/people.json</h2>
+
 
 </body>
 </html>
