--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <h1>Prueba</h1>
-    <h2>https://ajoaquinlizarraga.github.io/apipublic/mydata/people/people.json</h2>
-    <h2>https://ajoaquinlizarraga.github.io/apipublic/mydata/people/people.json</h2>
-
+    <a href="https://gamma1404.github.io/Prueba/Api/datraPeople.json">Primera API</a>
 
 </body>
 </html>
