--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Prueba</h1>
-    <a href="https://gamma1404.github.io/Prueba/Api/datraPeople.json">Primera API</a>
+    <a href="https://gamma1404.github.io/Prueba/Api/datraPeople.json">Primera API prueba</a>
 
 </body>
 </html>
